<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/v4_mainL"
    style="@style/mainL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/v4_title"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v3_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/btn_4_return"
        style="@style/v0_btn"
        android:onClick="goBackToGame"
        android:text="@string/v0_btn_rtrn_txt"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_4_save"
        style="@style/v0_btn"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:onClick="goSave"
        android:text="@string/v0_btn_sv_txt"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_4_option"
        style="@style/v0_btn"
        android:onClick="goOptions"
        android:text="@string/v0_btn_opt_txt"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_4_quit"
        style="@style/v0_btn"
        android:onClick="goMainMenu"
        android:text="@string/v3_endGame"
        android:visibility="visible" />

</LinearLayout>