<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/v1_mainL"
    style="@style/mainL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/v1_header"
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/v1_title_txt" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/v1_backTV"
            style="@style/v1_back"
            android:layout_gravity="bottom|left"
            android:onClick="goBack"
            android:text="@string/v1_btn_back_txt" />

        <TextView
            android:id="@+id/v1_saveTV"
            style="@style/v1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:onClick="goSaveOptions"
            android:text="@string/v4_save_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/v1_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Язык" />

            <Spinner
                android:id="@+id/v4_optionLanguageS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>